[package]
name = "spreadsheet_engine"
version = "0.1.0"
authors = ["Alladin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
lazy_static = "1.5.0"
pest = "2.8.3"
pest_derive = "2.8.3"
petgraph = "0.8.3"
pratt = "0.4.0"
tracing = "0.1"
tracing-wasm = "0.2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
